[package]
name = "rokit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.iced]
version = "0.3"
default-features = false
features = ["glow", "smol"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced_native = "0.4"
